--- a/index.html
+++ b/index.html
@@ -173,12 +173,6 @@ into stunning masterpieces</h1>
     </div>
   </div>
 </footer>
-
-
-
-
-
-
 </body>
-<script src="./main.js"></script>
+<script src="main.js"></script>
 </html>
